# zmije

./: .gitignore  README.md  README_EN.md  example.py  example.zm  main.py  pyproject.toml  test_english_keywords.py
.github/workflows/: test.yml
internal/: csv_convertor.py  data.py
tests/: test_capitalize_validation.py  test_decimal_separator.py  test_integration.py  test_list_separators.py  test_rewrite_tokens.py  test_transpile.py
zmije/: __main__.py  main.py
zmije/internal/: data.py
