[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zmije"
version = "0.1.0"
description = "Zmije - Český python"
requires-python = ">=3.8"


[project.scripts]
zmije = "zmije.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=9.0.1"]
